--- a/sites/svelte.dev/src/app.html
+++ b/sites/svelte.dev/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="theme-color" content="#ff3e00" />
 
 		<link rel="manifest" href="/manifest.json" />
-		<link rel="icon" type="image/png" href="/favicon.png" />
+		<link rel="icon" type="image/png" href="/favicon.ico" />
 
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:site" content="@sveltejs" />
